--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <style>
     body{
-      background: linear-gradient(to right, #32115C, #3E115C, #4B115C, #58115C,#58115C,#4B115C, #3E115C, #32115C);
+      background: linear-gradient(to right, #32115C, #3E115C,#4B115C, #3E115C, #3E115C, #32115C);
     }
 
   </style>
