--- a/src/index.html
+++ b/src/index.html
@@ -7,13 +7,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <style>
-    body{
-      background: linear-gradient(to right, #32115C, #3E115C,#4B115C, #3E115C, #3E115C, #32115C);
-    }
+   body {
+    background: linear-gradient(to right, #32115C, #3E115C, #4B115C, #3E115C, #3E115C, #32115C) !important;
+  }
 
   </style>
 </head>
 <body>
+  .
   <app-root></app-root>
 </body>
 </html>
