--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,9 @@
 </head>
 <body>
   .
-  <app-root></app-root>
+  <app-root>
+    <app-login-component class="divbox"></app-login-component>
+
+  </app-root>
 </body>
 </html>
