--- a/src/index.html
+++ b/src/index.html
@@ -7,17 +7,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <style>
-   body {
-    background: linear-gradient(to right, #32115C, #3E115C, #4B115C, #3E115C, #3E115C, #32115C) !important;
-  }
+    body{
+      background: linear-gradient(to right, #32115C, #3E115C,#4B115C, #3E115C, #3E115C, #32115C);
+    }
 
   </style>
 </head>
 <body>
   .
-  <app-root>
-    <app-login-component class="divbox"></app-login-component>
-
-  </app-root>
+  <app-root ></app-root>
 </body>
 </html>
